# rust-chunking

./: Cargo.toml  README.md  pyproject.toml  test.py
src/: html.rs  lib.rs  similarity.rs
