[package]
name = "rusk-chunking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusk_chunking"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
text-splitter = { version = "0.13.1", features = ["tokenizers"] }
tokenizers = { version = "0.19.1", features = ["http"] }