[package]
name = "rusk-chunking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusk_chunking"
crate-type = ["cdylib"]

[dependencies]
#candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1"} # , features = ["cuda"]
#candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" } # , features = ["cuda", "accelerate"]
#candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.1"} # , features = ["cuda", "accelerate", "flash-attn"]
#hf-hub = { version = "0.3.2", features = ["tokio"] }
html2text = "0.12.5"
pyo3 = "0.21.2"
rayon = "1.10.0"
text-splitter = { version = "0.13.1", features = ["tokenizers"] }
tokenizers = { version = "0.19.1", features = ["http"] }
#anyhow = "1.0.86"
#clap = { version = "4.5.4", features = ["derive"] }
#serde_json = "1.0.117"
#tracing-subscriber = "0.3.18"
