[package]
name = "rusk-chunking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusk_chunking"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
rayon = "1.10.0"
text-splitter = { version = "0.13.1", features = ["tokenizers"] }
tokenizers = { version = "0.19.1", features = ["http"] }
ammonia = "4.0.0"
regex = "1.10.4"
# visdom = { version = "1.0.1", features = ["text"] }
html2text = "0.12.5"
mdka = "1.2.4"

